updated to pull request #23

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-tclIndex
+src/tclIndex
 Gizi3*Linux.tgz
 gama-local
 triangle
 triangle1.3
 cs2cs
-build_date.tcl
-GeoEasy.tcl
+src/build_date.tcl
+src/GeoEasy.tcl
 GeoEasy
-ComEasy.tcl
+src/ComEasy.tcl
 ComEasy
 geo_easy.log
-defaultmask.tcl
+src/defaultmask.tcl
 *.svg
 *.exe
 *.g[123]d
-*.txp
+src/*.txp
 *.pdf
 tcldoc
 eng_[a-z][a-z][a-z].txt
