--- a/src/Makefile
+++ b/src/Makefile
@@ -87,12 +87,12 @@ deb: ${GE_SOURCES} ${CE_SOURCES} index.tcl
 	echo global build_date > build_date.tcl
 	echo set build_date `date +%Y.%m.%d.` >> build_date.tcl
 	./index.tcl ${GE_SOURCES}
-	cp -frv * ../deb/data/usr/share/geoeasy
-	ln -svf /usr/bin/cs2cs ../deb/data/usr/share/geoeasy/cs2cs
-	ln -svf /usr/bin/gama-local ../deb/data/usr/share/geoeasy/gama-local
-	ln -svf /usr/bin/triangle ../deb/data/usr/share/geoeasy/triangle
-	mkdir -pv ../deb/data/usr/share/doc/geoeasy
-	cp -frv ../README.md ../doc ../deb/data/usr/share/doc/geoeasy
+	@cp -frv * ../deb/data/usr/share/geoeasy
+	@ln -svf /usr/bin/cs2cs ../deb/data/usr/share/geoeasy/cs2cs
+	@ln -svf /usr/bin/gama-local ../deb/data/usr/share/geoeasy/gama-local
+	@ln -svf /usr/bin/triangle ../deb/data/usr/share/geoeasy/triangle
+	@mkdir -pv ../deb/data/usr/share/doc/geoeasy
+	@cp -frv ../README.md ../doc ../deb/data/usr/share/doc/geoeasy
 	@head -n 8 ../LICENSE > ../deb/data/usr/share/doc/geoeasy/LICENSE
 	@echo "Read /usr/share/doc/license/gpl/gpl-2.0.txt.gz" >> ../deb/data/usr/share/doc/geoeasy/LICENSE
 	@ln -svf /usr/share/doc/license/gpl/gpl-2.0.txt.gz ../deb/data/usr/share/doc/geoeasy/gpl-2.0.txt.gz
