--- a/src/Makefile
+++ b/src/Makefile
@@ -25,7 +25,7 @@ DOC_SOURCES = adjgeo.tcl animate.tcl arcgeo.tcl calcgeo.tcl com_easy.tcl \
 #
 # files for debian package
 DEB_FILES = ${GE_SOURCES} ${CE_SOURCES} tclIndex \
-	./bitmaps ./com_set geo_easy.msk default.msk ./demodata \
+	./bitmaps ./com_set geo_easy.msk default.msk build_date.tcl ./demodata \
 	./i18n
 
 DEBBASE_PATH = "../deb"
